# a_util

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  build_tags.yml
a_util/: CMakeLists.txt  a_util_disable_rtti.cmake  a_util_test_projects.cmake  base.h  concurrency.h  datetime.h  filesystem.h  logging.h  memory.h  parser.h  process.h  regex.h  result.h  strings.h  system.h  variant.h  xml.h
a_util/base/: CMakeLists.txt  delegate.h  types.h
a_util/base/detail/: delegate_decl.h  delegate_impl.h
a_util/base/test/: CMakeLists.txt  delegate_test.cpp  maybe_unused_test.cpp
a_util/concurrency/: CMakeLists.txt  a_util_concurrency-config.cmake  atomic.h  chrono.h  condition_variable.h  fast_mutex.h  mutex.h  semaphore.h  shared_mutex.h  thread.h
a_util/concurrency/detail/: chrono_cxx11.h  condition_variable_cxx11.h  fast_mutex_decl.h  fast_mutex_impl.h  mutex_cxx11.h  semaphore_decl.h  semaphore_impl.h  shared_mutex.h  thread_cxx11.h
a_util/concurrency/impl/: atomic_fallback.cpp  shared_mutex.cpp
a_util/concurrency/test/: CMakeLists.txt  chrono_test.cpp  condvar_test.cpp  mutex_test.cpp  semaphore_test.cpp  thread_test.cpp
a_util/datetime/: CMakeLists.txt  a_util_datetime-config.cmake  datetime.cpp  datetime.h
a_util/datetime/test/: CMakeLists.txt  datetime_test.cpp
a_util/filesystem/: CMakeLists.txt  a_util_filesystem-config.cmake  filesystem.cpp  filesystem.h  path.cpp  path.h
a_util/filesystem/test/: CMakeLists.txt  filesystem_test.cpp  path_test.cpp
a_util/logging/: CMakeLists.txt  a_util_logging-config.cmake  log.cpp  log.h
a_util/logging/test/: CMakeLists.txt  logging_test.cpp
a_util/memory/: CMakeLists.txt  a_util_memory-config.cmake  memory.h  memorybuffer.h  shared_ptr.h  stack_ptr.h  unique_ptr.h
a_util/memory/detail/: shared_ptr_cxx11.h  stack_ptr_decl.h  stack_ptr_impl.h  unique_ptr_cxx11.h
a_util/memory/impl/: memory.cpp  memorybuffer.cpp
a_util/memory/test/: CMakeLists.txt  memory_test.cpp  memorybuffer_test.cpp  shared_ptr_incomplete.cpp  shared_ptr_test.cpp  stack_ptr_test.cpp  unique_ptr_test.cpp
a_util/parser/: CMakeLists.txt  a_util_csv_reader-config.cmake  csv_reader.cpp  csv_reader.h
a_util/parser/test/: CMakeLists.txt  csv_reader_test.cpp
a_util/process/: CMakeLists.txt  a_util_process-config.cmake  process.h
a_util/process/detail/: process_impl.h
a_util/process/impl/: process.cpp  process_lin.cpp  process_win.cpp
a_util/process/test/: CMakeLists.txt  process_env_test.cpp  process_execute_test.cpp
a_util/regex/: CMakeLists.txt  a_util_regex-config.cmake  regex.cpp  regularexpression.cpp  regularexpression.h
a_util/regex/test/: CMakeLists.txt  regex_test.cpp
a_util/result/: CMakeLists.txt  a_util_result-config.cmake  error_def.h  result_info.h  result_info_decl.h  result_type.h  result_type_decl.h  result_util.h
a_util/result/detail/: error_description_intf.h  reference_counted_object_intf.h  result_description_decl.h  result_description_impl.h  result_info_impl.h  result_type_impl.h
a_util/result/impl/: error_description.cpp  error_description.h  reference_counted_object.h  reference_counted_object_disable_dynamic_alloc.h  result_description_private.h  result_type.cpp  result_util.cpp
a_util/result/test/: CMakeLists.txt  error_def_test.cpp  ref_counted_object_test.cpp  result_type_from_lib_test.cpp  result_type_test.cpp
a_util/result/test/lib/: result_tester_lib.cpp  result_tester_lib.h
a_util/strings/: CMakeLists.txt  a_util_strings-config.cmake  strings_convert.h  strings_convert_decl.h  strings_format.h  strings_functions.h  strings_numeric_traits.h  strings_numeric_traits_decl.h  unicode.h
a_util/strings/detail/: strings_convert_impl.h  strings_numeric_traits_impl.h
a_util/strings/impl/: std_to_detail.h  strings.cpp  strings_convert.cpp  strings_default_conversion.cpp  strings_default_conversion.h  strings_format.cpp  strings_format_detail.h  strings_numeric_to_string.cpp  strings_numeric_traits.cpp  unicode.cpp
a_util/strings/test/: CMakeLists.txt  strings_convert_test.cpp  strings_format_test.cpp  strings_numeric_traits_test.cpp  strings_test.cpp  unicode_test.cpp
a_util/system/: CMakeLists.txt  a_util_system-config.cmake  system.h  timer.h  timer_decl.h  uuid.h
a_util/system/detail/: timer_impl.h
a_util/system/impl/: system.cpp  timer.cpp  uuid.cpp
a_util/system/test/: CMakeLists.txt  system_test.cpp  timer_test.cpp  uuid_test.cpp
a_util/variant/: CMakeLists.txt  a_util_variant-config.cmake  variant.cpp  variant.h
a_util/variant/test/: CMakeLists.txt  variant_test.cpp
a_util/xml/: CMakeLists.txt  a_util_xml-config.cmake  dom.cpp  dom.h
a_util/xml/test/: CMakeLists.txt  xml_test.cpp
a_util/xml/test/files/: test.xml
cmake/: check_cmake_install_prefix.cmake  enable_multicore_compilation.cmake
doc/: CMakeLists.txt  changelog.md  run_doxygen.cmake.in
doc/license/: licenses.txt  used_oss.md
lib/: CMakeLists.txt
lib/cmake/a_util/: a_util-config.cmake
scripts/debugging/: result.natvis
test/: CMakeLists.txt
test/function/: CMakeLists.txt
test/private/install_complete/: reference.yaml
test/private/install_complete/product/: common.txt  linux_armv8_gcc_5.4_debug.txt  linux_armv8_gcc_5.4_release.txt  linux_release.txt  linux_x86_64_gcc_4.8_debug.txt  linux_x86_64_gcc_4.8_release.txt  windows.txt  windows_debug.txt  windows_x86_64_visualstudio_debug.txt  windows_x86_64_visualstudio_v140_release.txt  windows_x86_visualstudio_debug.txt  windows_x86_visualstudio_release.txt
